--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -57,12 +57,11 @@ nav {
                     }
 
                     nav .nav-container .nav-buttons ul li .clickable {
-
                     }
 
-                    nav .nav-container .nav-buttons ul li .clickable:hover {
-                        color: var(--textMain);
-                    }
+                        nav .nav-container .nav-buttons ul li .clickable:hover {
+                            color: var(--textMain);
+                        }
 
         nav .nav-container .nav-options {
             display: flex;
@@ -772,7 +771,6 @@ nav {
         width: 30%;
         padding: 20px;
         gap: 10px;
-        
     }
 
         .people-component .people-container .btn {
@@ -784,24 +782,44 @@ nav {
         }
 
         .people-component .people-container .list-container {
-            display: flex;
             height: 100px;
-            border: 1px solid var(--gray4);
+            display: flex;
             overflow-y: scroll;
             scrollbar-width: none;
+            border-bottom: 1px solid var(--gray4);
         }
 
             .people-component .people-container .list-container .selected-list {
                 width: 100%;
-                height: fit-content;
                 display: flex;
                 flex-wrap: wrap;
+                height: fit-content;
                 align-items: flex-start;
                 justify-content: flex-start;
             }
 
                 .people-component .people-container .list-container .selected-list .selection {
                 }
+
+        .people-component .people-container .tabs {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+        }
+
+            .people-component .people-container .tabs .tab {
+                color: var(--textMain);
+                display: flex;
+                padding: 5px 10px;
+                flex-grow: 1;
+                text-align: center;
+                justify-content: center;
+            }
+
+            .people-component .people-container .tabs .open-tab {
+                background-color: var(--gray3);
+                border-bottom: 1px solid var(--gray4);
+            }
 
         .people-component .people-container .search {
             display: flex;
@@ -821,19 +839,33 @@ nav {
             flex-direction: column;
             overflow: scroll;
             scrollbar-width: none;
-            border-top: 1px solid var(--gray4);
-            border-bottom: 1px solid var(--gray4);
         }
 
             .people-component .people-container ul li {
                 border-bottom: 1px solid var(--gray3);
-                padding: 5px 0;
+                padding: 5px 10px;
                 font-size: 13px;
                 user-select: none;
+                display: flex;
+                justify-content: space-between;
             }
 
+                .people-component .people-container ul li .info {
+                    flex-grow: 1;
+                    height: 100%;
+                }
+
+                .people-component .people-container ul li .selector {
+                    height: 100%;
+                }
+
+                    .people-component .people-container ul li .selector input {
+                        padding: 10px;
+                        cursor: pointer;
+                    }
+
                 .people-component .people-container ul li:hover {
-                    background-color: var(--gray3);
+                    background-color: var(--gray4);
                     cursor: pointer;
                 }
 
@@ -841,9 +873,11 @@ nav {
                     color: var(--textSub1);
                 }
 
-                .people-component .people-container ul .selected {
-                    background-color: var(--gray4) !important;
-                }
+            .people-component .people-container ul .selected {
+                background-color: var(--gray3);
+                color: var(--green1);
+                border-bottom: 1px solid var(--gray4);
+            }
 
         .people-component .people-container .groups {
             height: 50%;
@@ -905,7 +939,7 @@ nav {
                         padding: 2px 5px;
                     }
 
-        
+
 .drop-main {
     background-color: var(--gray3);
     color: var(--textMain);
@@ -949,6 +983,7 @@ nav {
                 .account-links ul li a:active {
                     background-color: var(--gray4);
                 }
+
 .main-banner {
     background-image: linear-gradient(to bottom right, var(--gray1),var(--gray3),var(--gray1),var(--gray1),var(--gray3),var(--gray1));
     background-color: black;
