--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -298,6 +298,10 @@ nav {
                     .panel .body .properties .user-form .field-container .text-group .info-content {
                         height: 100%;
                         flex-grow: 1;
+                        width: 200px;
+                        display: flex;
+                        flex-wrap: wrap;
+                        flex-direction: column;
                     }
 
                     .panel .body .properties .user-form .field-container .text-group .title {
@@ -839,33 +843,56 @@ nav {
             flex-direction: column;
             overflow: scroll;
             scrollbar-width: none;
+            border-bottom: 1px solid var(--gray4);
         }
 
             .people-component .people-container ul li {
+                padding: 0 5px;
                 border-bottom: 1px solid var(--gray3);
-                padding: 5px 10px;
                 font-size: 13px;
                 user-select: none;
                 display: flex;
                 justify-content: space-between;
+                align-items: center;
             }
 
+                .people-component .people-container ul li .photo {
+                    height: 30px;
+                    width: 30px;
+                    border-radius: 50%;
+                    border: 1px solid var(--gray3);
+                    background-color: var(--gray4);
+                }
+
                 .people-component .people-container ul li .info {
+                    padding: 5px 10px;
                     flex-grow: 1;
-                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+
                 }
 
                 .people-component .people-container ul li .selector {
-                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    
                 }
 
-                    .people-component .people-container ul li .selector input {
-                        padding: 10px;
-                        cursor: pointer;
+                    .people-component .people-container ul li .selector img {
+                        height: 100%;
+                        width: 40px;
+                        filter: invert(60%);
                     }
 
+                        .people-component .people-container ul li .selector img:hover {
+                            filter: invert(100%);
+                        }
+
                 .people-component .people-container ul li:hover {
-                    background-color: var(--gray4);
+                    background-color: var(--gray3);
+                    border-bottom: 1px solid var(--gray4);
                     cursor: pointer;
                 }
 
@@ -874,7 +901,7 @@ nav {
                 }
 
             .people-component .people-container ul .selected {
-                background-color: var(--gray3);
+                background-color: var(--gray2);
                 color: var(--green1);
                 border-bottom: 1px solid var(--gray4);
             }
