--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -1,28 +1,28 @@
 .content {
-    display: flex;
     justify-content: flex-start;
-    align-items: center;
     flex-direction: column;
-    width: 1500px;
+    align-items: center;
     max-width: 95%;
+    display: flex;
+    width: 1500px;
 }
 
 nav {
-    top: 0;
-    display: flex;
-    width: 100%;
+    border-bottom: 1px solid var(--gray4);
     background-color: var(--black);
     justify-content: center;
     margin-bottom: 50px;
-    border-bottom: 1px solid var(--gray4);
+    display: flex;
+    width: 100%;
+    top: 0;
 }
 
     nav .nav-container {
-        display: flex;
-        align-items: center;
         justify-content: space-between;
-        width: 1500px;
+        align-items: center;
         max-width: 95%;
+        display: flex;
+        width: 1500px;
     }
 
         nav .nav-container .nav-buttons {
@@ -30,30 +30,30 @@ nav {
         }
 
             nav .nav-container .nav-buttons ul {
-                display: flex;
                 flex-direction: row;
                 align-items: center;
+                display: flex;
                 height: 60px;
             }
 
                 nav .nav-container .nav-buttons ul li {
-                    list-style: none;
-                    height: 100%;
-                    display: flex;
                     align-items: center;
+                    list-style: none;
+                    display: flex;
+                    height: 100%;
                 }
 
                     nav .nav-container .nav-buttons ul li a {
-                        display: flex;
-                        align-items: center;
                         color: var(--textSub1);
-                        font-size: 20px;
                         text-decoration: none;
+                        align-items: center;
                         text-align: center;
+                        user-select: none;
+                        font-size: 20px;
                         padding: 0 20px;
+                        display: flex;
                         height: 100%;
                         width: 100%;
-                        user-select: none;
                     }
 
                     nav .nav-container .nav-buttons ul li .clickable {
@@ -64,15 +64,15 @@ nav {
                         }
 
         nav .nav-container .nav-options {
-            display: flex;
             flex-direction: row;
+            display: flex;
             gap: 10px;
         }
 
             nav .nav-container .nav-options a, form button {
                 padding: 5px 10px;
-                height: 100%;
                 font-size: 15px;
+                height: 100%;
             }
 
 .panel {
@@ -81,33 +81,33 @@ nav {
 }
 
     .panel .body {
-        display: flex;
         flex-direction: row;
+        min-height: 800px;
+        display: flex;
         height: 100%;
         width: 100%;
-        min-height: 800px;
         gap: 30px;
     }
 
         .panel .body .side-bar {
-            display: flex;
             flex-direction: column;
             min-width: 250px;
+            display: flex;
         }
 
             .panel .body .side-bar ul {
-                display: flex;
                 flex-direction: column;
+                display: flex;
                 width: 100%;
-                margin: 0;
                 padding: 0;
+                margin: 0;
             }
 
             .panel .body .side-bar a {
-                text-decoration: none;
-                color: var(--textSub1);
-                padding: 10px 5px;
                 border-bottom: 1px solid var(--gray4);
+                color: var(--textSub1);
+                text-decoration: none;
+                padding: 10px 5px;
             }
 
                 .panel .body .side-bar a:hover {
@@ -116,21 +116,21 @@ nav {
                 }
 
             .panel .body .side-bar .selected {
-                color: var(--textMain);
                 background-color: var(--gray3);
+                color: var(--textMain);
             }
 
         .panel .body .properties {
-            display: flex;
-            flex-direction: row;
-            flex-grow: 1;
             justify-content: space-between;
+            flex-direction: row;
+            display: flex;
+            flex-grow: 1;
             gap: 30px;
         }
 
             .panel .body .properties .user-form {
-                display: flex;
                 flex-direction: column;
+                display: flex;
                 width: 100%;
             }
 
@@ -144,24 +144,24 @@ nav {
                 }
 
                 .panel .body .properties .user-form .field-container {
-                    color: var(--textMain);
-                    display: flex;
                     flex-direction: column;
+                    color: var(--textMain);
                     margin-top: 30px;
+                    display: flex;
                     width: 100%;
                 }
 
                 .panel .body .properties .user-form .btn-container {
-                    padding-top: 10px;
-                    width: 100%;
-                    display: flex;
                     flex-direction: row;
+                    padding-top: 10px;
+                    display: flex;
+                    width: 100%;
                     gap: 10px;
                 }
 
                     .panel .body .properties .user-form .btn-container .btn {
-                        margin-top: 5px;
                         padding: 6px 10px;
+                        margin-top: 5px;
                         font-size: 15px;
                     }
 
@@ -170,38 +170,38 @@ nav {
                         }
 
                 .panel .body .properties .user-form .field-container .form-group {
-                    display: flex;
                     flex-direction: row;
+                    margin-bottom: 20px;
                     min-width: 350px;
+                    display: flex;
                     width: 45%;
                     gap: 20px;
-                    margin-bottom: 20px;
                 }
 
                     .panel .body .properties .user-form .field-container .form-group .form {
-                        width: 100%;
-                        display: flex;
                         flex-direction: column;
                         min-height: 45px;
+                        display: flex;
+                        width: 100%;
                     }
 
                         .panel .body .properties .user-form .field-container .form-group .form .labels {
-                            display: flex;
                             margin-bottom: 3px;
+                            display: flex;
                         }
 
                             .panel .body .properties .user-form .field-container .form-group .form .labels .control-label {
                             }
 
                             .panel .body .properties .user-form .field-container .form-group .form .labels .text-danger {
-                                color: #ff3434;
                                 margin-left: 10px;
+                                color: #ff3434;
                             }
 
                     .panel .body .properties .user-form .field-container .form-group .form-control {
-                        width: 100%;
                         border: none;
                         height: 25px;
+                        width: 100%;
                     }
 
                     .panel .body .properties .user-form .field-container .form-group textarea {
@@ -212,57 +212,57 @@ nav {
 
                     .panel .body .properties .user-form .field-container .form-group .form-drop2 {
                         display: block;
-                        width: 100%;
                         border: none;
                         height: 25px;
+                        width: 100%;
                     }
 
                     .panel .body .properties .user-form .field-container .form-group .selections {
-                        display: flex;
                         border-bottom: 1px solid var(--gray4);
-                        padding: 5px;
-                        min-height: 30px;
                         margin-bottom: 10px;
+                        min-height: 30px;
+                        display: flex;
+                        padding: 5px;
                     }
 
                         .panel .body .properties .user-form .field-container .form-group .selections ul {
-                            display: flex;
                             flex-direction: row;
                             flex-wrap: wrap;
+                            display: flex;
                         }
 
                             .panel .body .properties .user-form .field-container .form-group .selections ul li {
-                                list-style: none;
                                 background-color: var(--mainTheme);
-                                cursor: pointer;
-                                padding: 3px 10px;
                                 border-radius: 20px;
+                                padding: 3px 10px;
+                                list-style: none;
+                                cursor: pointer;
                                 margin: 2px;
                             }
 
                     .panel .body .properties .user-form .field-container .form-group .selectors {
-                        display: flex;
+                        justify-content: space-between;
                         flex-direction: row;
                         margin-bottom: 10px;
+                        display: flex;
                         width: 100%;
-                        justify-content: space-between;
                     }
 
                         .panel .body .properties .user-form .field-container .form-group .selectors .selector {
-                            display: flex;
                             flex-direction: column;
+                            display: flex;
                             width: 48%;
                         }
 
                             .panel .body .properties .user-form .field-container .form-group .selectors .selector .btn {
-                                padding: 6px 0;
                                 font-size: 15px;
+                                padding: 6px 0;
                             }
 
                             .panel .body .properties .user-form .field-container .form-group .selectors .selector .form-drop {
+                                font-size: 15px;
                                 display: none;
                                 color: black;
-                                font-size: 15px;
                                 width: 100%;
                             }
 
@@ -272,9 +272,9 @@ nav {
                                 }
 
                                     .panel .body .properties .user-form .field-container .form-group .selectors .selector .form-drop ul li {
+                                        background-color: white;
                                         cursor: pointer;
                                         padding: 5px;
-                                        background-color: white;
                                     }
 
                                         .panel .body .properties .user-form .field-container .form-group .selectors .selector .form-drop ul li:hover {
@@ -282,12 +282,12 @@ nav {
                                         }
 
                 .panel .body .properties .user-form .field-container .text-group {
-                    display: flex;
-                    flex-direction: row;
-                    padding: 5px 0;
-                    width: 100%;
-                    max-width: 800px;
                     border-bottom: 1px solid var(--gray3);
+                    flex-direction: row;
+                    max-width: 800px;
+                    padding: 5px 0;
+                    display: flex;
+                    width: 100%;
                 }
 
                     .panel .body .properties .user-form .field-container .text-group .identifier {
@@ -296,18 +296,18 @@ nav {
                     }
 
                     .panel .body .properties .user-form .field-container .text-group .info-content {
-                        height: 100%;
-                        flex-grow: 1;
-                        width: 200px;
-                        display: flex;
-                        flex-wrap: wrap;
                         flex-direction: column;
+                        flex-wrap: wrap;
+                        display: flex;
+                        flex-grow: 1;
+                        height: 100%;
+                        width: 200px;
                     }
 
                     .panel .body .properties .user-form .field-container .text-group .title {
                         color: var(--textSub1);
-                        margin: 0;
                         font-size: 18px;
+                        margin: 0;
                     }
 
                     .panel .body .properties .user-form .field-container .text-group .info {
@@ -316,32 +316,32 @@ nav {
                     }
 
             .panel .body .properties .tool-container {
-                display: flex;
                 min-width: 270px;
+                display: flex;
             }
 
                 .panel .body .properties .tool-container .section-title {
-                    font-size: 15px;
                     color: var(--textMain);
+                    font-size: 15px;
                 }
 
                 .panel .body .properties .tool-container .tools {
-                    display: flex;
                     flex-direction: column;
                     color: var(--textMain);
+                    display: flex;
                     width: 100%;
                 }
 
                     .panel .body .properties .tool-container .tools .title {
-                        padding-bottom: 10px;
                         border-bottom: 1px solid var(--gray4);
+                        padding-bottom: 10px;
                         font-weight: bold;
                         font-size: 17px;
                     }
 
                     .panel .body .properties .tool-container .tools .btns {
-                        display: flex;
                         flex-direction: column;
+                        display: flex;
                     }
 
                         .panel .body .properties .tool-container .tools .btns .btn {
@@ -762,6 +762,7 @@ nav {
     max-width: 95%;
     bottom: 15%;
     top: 15%;
+    max-height: 800px;
     position: fixed;
     background-color: var(--gray1);
     display: flex;
@@ -771,11 +772,11 @@ nav {
 }
 
     .people-component .people-container {
-        display: flex;
-        flex-direction: column;
         border-right: 1px solid var(--gray4);
-        width: 30%;
+        flex-direction: column;
         padding: 20px;
+        display: flex;
+        width: 30%;
         gap: 10px;
     }
 
@@ -788,43 +789,43 @@ nav {
         }
 
         .people-component .people-container .list-container {
-            height: 100px;
-            display: flex;
-            overflow-y: scroll;
-            scrollbar-width: none;
             border-bottom: 1px solid var(--gray4);
+            scrollbar-width: none;
+            overflow-y: scroll;
+            display: flex;
+            height: 100px;
         }
 
             .people-component .people-container .list-container .selected-list {
-                width: 100%;
-                display: flex;
-                flex-wrap: wrap;
-                height: fit-content;
-                align-items: flex-start;
                 justify-content: flex-start;
+                align-items: flex-start;
+                height: fit-content;
+                flex-wrap: wrap;
+                display: flex;
+                width: 100%;
             }
 
                 .people-component .people-container .list-container .selected-list .selection {
                 }
 
         .people-component .people-container .tabs {
+            justify-content: space-around;
             display: flex;
             width: 100%;
-            justify-content: space-around;
         }
 
             .people-component .people-container .tabs .tab {
-                color: var(--textMain);
-                display: flex;
-                padding: 5px 10px;
-                flex-grow: 1;
-                text-align: center;
                 justify-content: center;
+                color: var(--textMain);
+                text-align: center;
+                padding: 5px 10px;
+                display: flex;
+                flex-grow: 1;
             }
 
             .people-component .people-container .tabs .open-tab {
-                background-color: var(--gray3);
                 border-bottom: 1px solid var(--gray4);
+                background-color: var(--gray3);
             }
 
         .people-component .people-container .search {
@@ -832,57 +833,56 @@ nav {
         }
 
             .people-component .people-container .search input {
-                height: 30px;
                 font-size: 15px;
+                height: 30px;
                 width: 100%;
             }
 
         .people-component .people-container ul {
+            border-bottom: 1px solid var(--gray4);
+            flex-direction: column;
+            scrollbar-width: none;
+            overflow: scroll;
+            font-size: 15px;
+            display: flex;
             flex-grow: 1;
             height: 50%;
-            display: flex;
-            font-size: 15px;
-            flex-direction: column;
-            overflow: scroll;
-            scrollbar-width: none;
-            border-bottom: 1px solid var(--gray4);
         }
 
             .people-component .people-container ul li {
-                padding: 0 5px;
                 border-bottom: 1px solid var(--gray3);
-                font-size: 13px;
-                user-select: none;
-                display: flex;
                 justify-content: space-between;
                 align-items: center;
+                user-select: none;
+                font-size: 13px;
+                padding: 0 5px;
+                display: flex;
             }
 
                 .people-component .people-container ul li .photo {
-                    display: flex;
                     justify-content: center;
                     align-items: center;
-                    height: 100%;
                     min-width: 40px;
+                    display: flex;
+                    height: 100%;
                 }
 
                     .people-component .people-container ul li .photo .frame {
-                        min-height: 30px;
-                        min-width: 30px;
-                        height: 30px;
-                        width: 30px;
+                        background-color: var(--gray3);
+                        border: 1px solid var(--gray4);
                         border-radius: 50%;
-                        border: 1px solid var(--gray3);
-                        background-color: var(--gray4);
+                        min-height: 27px;
+                        min-width: 27px;
+                        height: 27px;
+                        width: 27px;
                     }
 
                 .people-component .people-container ul li .info {
-                    padding: 5px 10px;
-                    flex-grow: 1;
-                    display: flex;
-                    flex-direction: column;
                     justify-content: center;
-
+                    flex-direction: column;
+                    padding: 5px 10px;
+                    display: flex;
+                    flex-grow: 1;
                 }
 
                 .people-component .people-container ul li .selector {
