--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -80,7 +80,7 @@
                 <div class="tools">
                     <p class="title">Options:</p>
                     <div class="search">
-                        <input placeholder="Search Training Orders" type="search" onchange="update(this)">
+                        <input placeholder="Search Training Orders" type="search" onchange="update(this)"/>
                     </div>
                     <div class="selections">
                         <p class="section-title">Show in List:</p>
