--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         <div class="nav-container">
             <div class="nav-buttons">
                 <ul>
-                    <li class="main-title"><a>WCS Trainer</a></li>
+                    <li><a class="main-title">WCS Trainer</a></li>
                     <li><a asp-page="/Index" class="clickable">Home</a></li>
                     @if (SignInManager.IsSignedIn(User)) {
                         <li><a asp-page="/TrainingOrders/Index" class="clickable">My Panel</a></li>
