--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -87,9 +87,9 @@
                                     <span asp-validation-for="TrainingOrder.priorityLevel" class="text-danger"></span>
                                 </div>
                                 <select asp-for="TrainingOrder.priorityLevel" class="form-drop2">
-                                    <option value="3">3 - High</option>
-                                    <option value="2">2 - Medium</option>
-                                    <option value="1">1 - Low</option>
+                                    <option value="High">High</option>
+                                    <option value="Medium">Medium</option>
+                                    <option value="Low">Low</option>
                                 </select>
                             </div>
                         </div>
