--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -96,7 +96,7 @@
                     </div>
                     <div class="text-group">
                         <div class="identifier">
-                            <p class="title">Medium</p>
+                            <p class="title">Learning Medium</p>
                         </div>
                         <div class="info-content">
                             <p class="info">@Html.DisplayFor(model => model.TrainingOrder.medium)</p>
