--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -104,7 +104,7 @@
                             </div>
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Medium</p>
+                                    <p class="control-label">Learning Medium</p>
                                     <span asp-validation-for="TrainingOrder.medium" class="text-danger"></span>
                                 </div>
                                 <input asp-for="TrainingOrder.medium" class="form-control" />
@@ -124,9 +124,9 @@
                                     <span asp-validation-for="TrainingOrder.priorityLevel" class="text-danger"></span>
                                 </div>
                                 <select asp-for="TrainingOrder.priorityLevel" class="form-drop2">
-                                    <option value="3">3 - High</option>
-                                    <option value="2">2 - Medium</option>
-                                    <option value="1">1 - Low</option>
+                                    <option value="High">High</option>
+                                    <option value="Medium">Medium</option>
+                                    <option value="Low">Low</option>
                                 </select>
                             </div>
                         </div>
