--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -134,9 +134,8 @@
                             <div class="form">
                                 <div class="labels">
                                     <p class="control-label">Description</p>
-                                    <span asp-validation-for="TrainingOrder.description" class="text-danger"></span>
                                 </div>
-                                <input asp-for="TrainingOrder.description" class="form-control" />
+                                <textarea rows="5" asp-for="TrainingOrder.description"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
